--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "eslint-config-next": "13.2.4",
     "font-awesome": "^4.7.0",
     "formik": "^2.2.9",
+    "graphql": "^16.6.0",
+    "graphql-request": "^5.2.0",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
